--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-svg": "13.9.0"
   },
   "devDependencies": {
